--- a/templates/ios/Example/Podfile
+++ b/templates/ios/Example/Podfile
@@ -1,6 +1,10 @@
-use_frameworks!
+source 'https://github.com/CocoaPods/Specs.git'
+source 'http://gitlab.infra.ahotels.tech/ios/Common/OYOPodspecs.git'
 
-platform :ios, '8.0'
+use_frameworks!
+platform :ios, '9.0'
+inhibit_all_warnings!
+install! 'cocoapods', preserve_pod_file_structure: true
 
 target '${POD_NAME}_Example' do
   pod '${POD_NAME}', :path => '../'
