--- a/templates/swift/Example/Podfile
+++ b/templates/swift/Example/Podfile
@@ -1,3 +1,5 @@
+source 'https://github.com/CocoaPods/Specs.git'
+source 'http://gitlab.infra.ahotels.tech/ios/Common/OYOPodspecs.git'
 use_frameworks!
 
 target '${POD_NAME}_Example' do
